--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Tensor-library"]
 	path = Tensor-library
 	url = https://github.com/alarxx/Tensor-library.git
+[submodule "opencv"]
+	path = opencv
+	url = git@github.com:opencv/opencv.git
